kubernetes/apps/longhorn/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn
  labels:
    app.kubernetes.io/name: longhorn
