kubernetes/apps/longhorn/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn
  annotations:
    external-dns.alpha.kubernetes.io/target: <path:cloudflared:tunnel-config#tunnel-target>
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.<path:cert-manager:domain-config#domain>`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls: {}
